--- a/youzone/package.json
+++ b/youzone/package.json
@@ -1,5 +1,6 @@
 {
   "name": "youzone",
+  "homepage": "https://Sumit-singh18.github.io/Streamly",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.0",
